compiler/parser/pgql_parser.go
// Code generated from pgql.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // pgql

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type pgqlParser struct {
	*antlr.BaseParser
}

var PgqlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func pgqlParserInit() {
	staticData := &PgqlParserStaticData
	staticData.LiteralNames = []string{
		"", "'show'", "'for'", "'by'", "'where'", "'sort by'", "':'", "'player'",
		"'team'", "'date'", "'type'", "'kills'", "'damage'", "'assists'", "'rescues'",
		"'recalls'", "'win'", "'game'", "'totalWins'", "'totalLoses'", "'gameCount'",
		"'desc'", "'asc'", "'running'", "'average'", "'total'", "'min'", "'max'",
		"'<='", "'>='", "'>'", "'<'", "'='", "'!='", "'+'", "'-'", "'*'", "'/'",
		"'and'", "'or'", "'not'", "'('", "')'", "','",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "PLAYER", "TEAM", "DATE", "TYPE", "KILLS",
		"DAMAGE", "ASSISTS", "RESCUES", "RECALLS", "WIN", "GAME", "TOTALWINS",
		"TOTALLOSES", "GAMECOUNT", "DESC", "ASC", "RUNNING", "AVERAGE", "TOTAL",
		"MIN", "MAX", "LESSEREQUAL", "GREATEREQUAL", "GREATER", "LESSER", "EQUAL",
		"NOTEQUAL", "SUM", "DIFFERENCE", "MULTIPLY", "DIVIDE", "LOGICALAND",
		"LOGICALOR", "LOGICALNOT", "LPAREN", "RPAREN", "COMMA", "STRING", "NUMBER",
		"IDENTIFIER", "WS",
	}
	staticData.RuleNames = []string{
		"statement", "showClause", "showBody", "showFragment", "forClause",
		"byClause", "whereClause", "sortByClause", "sortBody", "dimension",
		"measure", "aggregateFunction", "sequentialFunction", "comparisonOperator",
		"predicate", "scope", "expr",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// pgqlParserInit initializes any static state used to implement pgqlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewpgqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PgqlParserInit() {
	staticData := &PgqlParserStaticData
	staticData.once.Do(pgqlParserInit)
}

// NewpgqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewpgqlParser(input antlr.TokenStream) *pgqlParser {
	PgqlParserInit()
	this := new(pgqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PgqlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "pgql.g4"

	return this
}

// pgqlParser tokens.
const (
	pgqlParserEOF          = antlr.TokenEOF
	pgqlParserT__0         = 1
	pgqlParserT__1         = 2
	pgqlParserT__2         = 3
	pgqlParserT__3         = 4
	pgqlParserT__4         = 5
	pgqlParserT__5         = 6
	pgqlParserPLAYER       = 7
	pgqlParserTEAM         = 8
	pgqlParserDATE         = 9
	pgqlParserTYPE         = 10
	pgqlParserKILLS        = 11
	pgqlParserDAMAGE       = 12
	pgqlParserASSISTS      = 13
	pgqlParserRESCUES      = 14
	pgqlParserRECALLS      = 15
	pgqlParserWIN          = 16
	pgqlParserGAME         = 17
	pgqlParserTOTALWINS    = 18
	pgqlParserTOTALLOSES   = 19
	pgqlParserGAMECOUNT    = 20
	pgqlParserDESC         = 21
	pgqlParserASC          = 22
	pgqlParserRUNNING      = 23
	pgqlParserAVERAGE      = 24
	pgqlParserTOTAL        = 25
	pgqlParserMIN          = 26
	pgqlParserMAX          = 27
	pgqlParserLESSEREQUAL  = 28
	pgqlParserGREATEREQUAL = 29
	pgqlParserGREATER      = 30
	pgqlParserLESSER       = 31
	pgqlParserEQUAL        = 32
	pgqlParserNOTEQUAL     = 33
	pgqlParserSUM          = 34
	pgqlParserDIFFERENCE   = 35
	pgqlParserMULTIPLY     = 36
	pgqlParserDIVIDE       = 37
	pgqlParserLOGICALAND   = 38
	pgqlParserLOGICALOR    = 39
	pgqlParserLOGICALNOT   = 40
	pgqlParserLPAREN       = 41
	pgqlParserRPAREN       = 42
	pgqlParserCOMMA        = 43
	pgqlParserSTRING       = 44
	pgqlParserNUMBER       = 45
	pgqlParserIDENTIFIER   = 46
	pgqlParserWS           = 47
)

// pgqlParser rules.
const (
	pgqlParserRULE_statement          = 0
	pgqlParserRULE_showClause         = 1
	pgqlParserRULE_showBody           = 2
	pgqlParserRULE_showFragment       = 3
	pgqlParserRULE_forClause          = 4
	pgqlParserRULE_byClause           = 5
	pgqlParserRULE_whereClause        = 6
	pgqlParserRULE_sortByClause       = 7
	pgqlParserRULE_sortBody           = 8
	pgqlParserRULE_dimension          = 9
	pgqlParserRULE_measure            = 10
	pgqlParserRULE_aggregateFunction  = 11
	pgqlParserRULE_sequentialFunction = 12
	pgqlParserRULE_comparisonOperator = 13
	pgqlParserRULE_predicate          = 14
	pgqlParserRULE_scope              = 15
	pgqlParserRULE_expr               = 16
)

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ShowClause() IShowClauseContext
	ForClause() IForClauseContext
	EOF() antlr.TerminalNode
	ByClause() IByClauseContext
	WhereClause() IWhereClauseContext
	SortByClause() ISortByClauseContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = pgqlParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) ShowClause() IShowClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IShowClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IShowClauseContext)
}

func (s *StatementContext) ForClause() IForClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IForClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IForClauseContext)
}

func (s *StatementContext) EOF() antlr.TerminalNode {
	return s.GetToken(pgqlParserEOF, 0)
}

func (s *StatementContext) ByClause() IByClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IByClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IByClauseContext)
}

func (s *StatementContext) WhereClause() IWhereClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhereClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhereClauseContext)
}

func (s *StatementContext) SortByClause() ISortByClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISortByClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISortByClauseContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case pgqlVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *pgqlParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, pgqlParserRULE_statement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)
		p.ShowClause()
	}
	{
		p.SetState(35)
		p.ForClause()
	}
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == pgqlParserT__2 {
		{
			p.SetState(36)
			p.ByClause()
		}

	}
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == pgqlParserT__3 {
		{
			p.SetState(39)
			p.WhereClause()
		}

	}
	p.SetState(43)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == pgqlParserT__4 {
		{
			p.SetState(42)
			p.SortByClause()
		}

	}
	{
		p.SetState(45)
		p.Match(pgqlParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IShowClauseContext is an interface to support dynamic dispatch.
type IShowClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ShowBody() IShowBodyContext
	SequentialFunction() ISequentialFunctionContext

	// IsShowClauseContext differentiates from other interfaces.
	IsShowClauseContext()
}

type ShowClauseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyShowClauseContext() *ShowClauseContext {
	var p = new(ShowClauseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_showClause
	return p
}

func InitEmptyShowClauseContext(p *ShowClauseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_showClause
}

func (*ShowClauseContext) IsShowClauseContext() {}

func NewShowClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ShowClauseContext {
	var p = new(ShowClauseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = pgqlParserRULE_showClause

	return p
}

func (s *ShowClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *ShowClauseContext) ShowBody() IShowBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IShowBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IShowBodyContext)
}

func (s *ShowClauseContext) SequentialFunction() ISequentialFunctionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISequentialFunctionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISequentialFunctionContext)
}

func (s *ShowClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ShowClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ShowClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case pgqlVisitor:
		return t.VisitShowClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *pgqlParser) ShowClause() (localctx IShowClauseContext) {
	localctx = NewShowClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, pgqlParserRULE_showClause)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(47)
		p.Match(pgqlParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == pgqlParserRUNNING {
		{
			p.SetState(48)
			p.SequentialFunction()
		}

	}
	{
		p.SetState(51)
		p.ShowBody()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IShowBodyContext is an interface to support dynamic dispatch.
type IShowBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllShowFragment() []IShowFragmentContext
	ShowFragment(i int) IShowFragmentContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsShowBodyContext differentiates from other interfaces.
	IsShowBodyContext()
}

type ShowBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyShowBodyContext() *ShowBodyContext {
	var p = new(ShowBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_showBody
	return p
}

func InitEmptyShowBodyContext(p *ShowBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_showBody
}

func (*ShowBodyContext) IsShowBodyContext() {}

func NewShowBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ShowBodyContext {
	var p = new(ShowBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = pgqlParserRULE_showBody

	return p
}

func (s *ShowBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *ShowBodyContext) AllShowFragment() []IShowFragmentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IShowFragmentContext); ok {
			len++
		}
	}

	tst := make([]IShowFragmentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IShowFragmentContext); ok {
			tst[i] = t.(IShowFragmentContext)
			i++
		}
	}

	return tst
}

func (s *ShowBodyContext) ShowFragment(i int) IShowFragmentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IShowFragmentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IShowFragmentContext)
}

func (s *ShowBodyContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(pgqlParserCOMMA)
}

func (s *ShowBodyContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(pgqlParserCOMMA, i)
}

func (s *ShowBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ShowBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ShowBodyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case pgqlVisitor:
		return t.VisitShowBody(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *pgqlParser) ShowBody() (localctx IShowBodyContext) {
	localctx = NewShowBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, pgqlParserRULE_showBody)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.ShowFragment()
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == pgqlParserCOMMA {
		{
			p.SetState(54)
			p.Match(pgqlParserCOMMA)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(55)
			p.ShowFragment()
		}

		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IShowFragmentContext is an interface to support dynamic dispatch.
type IShowFragmentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Measure() IMeasureContext
	AggregateFunction() IAggregateFunctionContext
	IDENTIFIER() antlr.TerminalNode
	Scope() IScopeContext
	LPAREN() antlr.TerminalNode
	RPAREN() antlr.TerminalNode
	Expr() IExprContext
	Predicate() IPredicateContext

	// IsShowFragmentContext differentiates from other interfaces.
	IsShowFragmentContext()
}

type ShowFragmentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyShowFragmentContext() *ShowFragmentContext {
	var p = new(ShowFragmentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_showFragment
	return p
}

func InitEmptyShowFragmentContext(p *ShowFragmentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_showFragment
}

func (*ShowFragmentContext) IsShowFragmentContext() {}

func NewShowFragmentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ShowFragmentContext {
	var p = new(ShowFragmentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = pgqlParserRULE_showFragment

	return p
}

func (s *ShowFragmentContext) GetParser() antlr.Parser { return s.parser }

func (s *ShowFragmentContext) Measure() IMeasureContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMeasureContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMeasureContext)
}

func (s *ShowFragmentContext) AggregateFunction() IAggregateFunctionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAggregateFunctionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAggregateFunctionContext)
}

func (s *ShowFragmentContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(pgqlParserIDENTIFIER, 0)
}

func (s *ShowFragmentContext) Scope() IScopeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IScopeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IScopeContext)
}

func (s *ShowFragmentContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(pgqlParserLPAREN, 0)
}

func (s *ShowFragmentContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(pgqlParserRPAREN, 0)
}

func (s *ShowFragmentContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ShowFragmentContext) Predicate() IPredicateContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPredicateContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPredicateContext)
}

func (s *ShowFragmentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ShowFragmentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ShowFragmentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case pgqlVisitor:
		return t.VisitShowFragment(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *pgqlParser) ShowFragment() (localctx IShowFragmentContext) {
	localctx = NewShowFragmentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, pgqlParserRULE_showFragment)
	p.SetState(73)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(61)
			p.Measure()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(62)
			p.AggregateFunction()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(63)
			p.Match(pgqlParserIDENTIFIER)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(64)
			p.Scope()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(65)
			p.Match(pgqlParserLPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 5, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(66)
				p.expr(0)
			}

		case 2:
			{
				p.SetState(67)
				p.predicate(0)
			}

		case antlr.ATNInvalidAltNumber:
			goto errorExit
		}
		{
			p.SetState(70)
			p.Match(pgqlParserRPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(71)
			p.Match(pgqlParserIDENTIFIER)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IForClauseContext is an interface to support dynamic dispatch.
type IForClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Dimension() IDimensionContext
	IDENTIFIER() antlr.TerminalNode

	// IsForClauseContext differentiates from other interfaces.
	IsForClauseContext()
}

type ForClauseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyForClauseContext() *ForClauseContext {
	var p = new(ForClauseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_forClause
	return p
}

func InitEmptyForClauseContext(p *ForClauseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = pgqlParserRULE_forClause
}

func (*ForClauseContext) IsForClauseContext() {}

func NewForClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ForClauseContext {
	var p = new(ForClauseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = pgqlParserRULE_forClause

	return p
}

func (s *ForClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *ForClauseContext) Dimension() IDimensionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDimensionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDimensionContext)
}

func (s *ForClauseContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(pgqlParserIDENTIFIER, 0)
}

func (s *ForClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ForClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ForClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case pgqlVisitor:
		return t.VisitForClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *pgqlParser) ForClause() (localctx IForClauseContext) {
	localctx = NewForClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, pgqlParserRULE_forClause)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(75)
		p.Match(pgqlParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(76)
		p.Dimension()
	}
	{
		p.SetState(77)
		p.Match(pgqlParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IByClauseContext is an interface to support dynamic dispatch.
type IByClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
